# bevy_enoki

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  enoki2d_editor-22af8243e9edbf2e.js  enoki2d_editor-3cb373ac3e58010.js  enoki2d_editor-4f4f57ba4ecadb7.js  enoki2d_editor-74c4731d1f0424eb.js  enoki2d_editor-7a4268e6956b4fe.js  enoki2d_editor-9dafa38dd191f54e.js  enoki2d_editor-dffac9dddd5e3ac3.js  index.html  publish.sh
.cargo/: config.toml
.github/workflows/: web.yml
assets/: base.particle.ron  custom_material.wgsl  fire.particle.ron  firework.particle.ron  ice.particle.ron  test.particle.ron
crates/editor/: .gitignore  Cargo.toml
crates/editor/src/: file.rs  gui.rs  main.rs
crates/enoki2d/: Cargo.toml
crates/enoki2d/src/: attractor.rs  color.rs  curve.rs  lib.rs  loader.rs  material.rs  sprite.rs  update.rs  values.rs
crates/enoki2d/src/particles_2d/: loader.rs  material.rs  mod.rs  particle_vertex.wgsl  update.rs
crates/enoki2d_editor/: .gitignore  Cargo.toml  README.md  index.html  trunk.toml
crates/enoki2d_editor/src/: file.rs  gui.rs  log.rs  main.rs  shader.rs
docs/: vid.webm
editor/: .gitignore  Cargo.toml  build.sh
editor/src/: bindings.rs  code.rs  file.rs  gui.rs  main.rs  texture.rs
editor/web/: editor.js  index.html  main.js
example/: Cargo.toml
example/assets/: attractor.particle.ron  base.particle.ron  firework.particle.ron  ice.particle.ron  non-relative_pos.particle.ron  relative_pos.particle.ron
example/src/: attractor.rs  dynamic.rs  material.rs  relative_position.rs  split_screen.rs  sprites.rs  utils.rs
examples/: dynamic.rs  material.rs  sprites.rs
src/: curve.rs  lib.rs  values.rs
src/particles_2d/: color.rs  loader.rs  material.rs  mod.rs  particle_color_frag.wgsl  particle_default_frag.wgsl  particle_sprite_frag.wgsl  particle_vertex.wgsl  particle_vertex_out.wgsl  render.rs  sprite.rs  update.rs
