[package]
name = "editor"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
rustflags = ["--cfg=web_sys_unstable_apis"]

[dependencies]
anyhow = "1.0.82"
bevy = "0.14.0"
bevy_egui = { version = "0.28.0", default-features = false, features = [
  "default_fonts",
  "render",
] }
egui_plot = "0.28"
bevy_enoki = { path = "../." }
crossbeam = { version = "0.8.4", features = [
  "crossbeam-deque",
  "crossbeam-channel",
] }
futures-lite = "2.3.0"
rfd = "0.14.1"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
wasm-bindgen = "0.2.92"
base64 = "0.22.0"
lazy_static = "1.4.0"
web-sys = { version = "0.3.69", features = ["File", "CustomEvent", "Window"] }
