[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.1", features = ["file_watcher"] }
bevy_enoki = { path = "../crates/enoki2d" }
rand = "0.8.5"

[[bin]]
name = "sprites"
path = "src/sprites.rs"

[[bin]]
name = "dynamic"
path = "src/dynamic.rs"

[[bin]]
name = "material"
path = "src/material.rs"

[[bin]]
name = "attractor"
path = "src/attractor.rs"

[[bin]]
name = "relative_position"
path = "src/relative_position.rs"
