[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.3"
bevy_enoki = { path = "../crates/enoki2d" }
rand = "0.9.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = { version = "0.17.3", features = ["file_watcher"] }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "sprites"
path = "src/sprites.rs"

[[bin]]
name = "dynamic"
path = "src/dynamic.rs"

[[bin]]
name = "material"
path = "src/material.rs"

[[bin]]
name = "attractor"
path = "src/attractor.rs"

[[bin]]
name = "relative_position"
path = "src/relative_position.rs"
