[package]
name = "bevy_enoki"
version = "0.5.0"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "2D Particle system plugin, that works well on wasm and mobile"
keywords = ["bevy", "particles", "shader", "2d", "particle"]
repository = "https://github.com/Lommix/bevy_enoki"
license = "MIT"
readme = "README.md"

[features]
dev = [
  "bevy/file_watcher",
  "bevy/dynamic_linking",
  "bevy/multi_threaded",
  "bevy/embedded_watcher",
]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_asset",
  "bevy_sprite",
  "bevy_sprite_render",
  "serialize",
  "png",
] }
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.10"
rand = { version = "0.8.5" }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
