[package]
name = "enoki2d_editor"
version = "0.2.0"
authors = ["Lorenz Mielke"]
keywords = ["bevy", "particles", "shader", "2d", "particle"]
description = "Particle editor for the bevy_enoki crate"
repository = "https://github.com/Lommix/bevy_enoki"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bevy_egui = "0.35"
anyhow = "1.0.82"
bevy = "0.16"
egui_plot = "0.32"
bevy_enoki = { path = "../enoki2d" }
crossbeam = { version = "0.8.4", features = [
  "crossbeam-deque",
  "crossbeam-channel",
] }
# futures-lite = "2.3.0"
rfd = "0.15"
ron = "0.10"
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.18"
bevy_pancam = "0.18"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
