[package]
name = "enoki2d_editor"
version = "0.3.0"
authors = ["Lorenz Mielke"]
keywords = ["bevy", "particles", "shader", "2d", "particle"]
description = "Particle editor for the bevy_enoki crate"
repository = "https://github.com/Lommix/bevy_enoki"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
bevy_egui = "0.38.1"
anyhow = "1.0.100"
bevy = "0.17"
egui_plot = "0.34.0"
bevy_enoki = { path = "../enoki2d" }
crossbeam = { version = "0.8.4", features = [
 "crossbeam-deque",
 "crossbeam-channel",
] }
# futures-lite = "2.3.0"
rfd = "0.17.1"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing-subscriber = "0.3.22"
bevy_pancam = { git = "https://github.com/pindash-io/bevy_pancam.git", branch = "bevy-0.17" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
